objects/CN_Approve_Process_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>CN_CEO_UserId__c</fullName>
        <label>CEO User ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_CFO_UserId__c</fullName>
        <label>CFO User ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Finance_AR_UserId__c</fullName>
        <label>Finance AR User ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Finance_MDM_UserId__c</fullName>
        <label>Finance MDM User ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Sales_MDM_UserId__c</fullName>
        <label>Sales MDM User ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>CN Approve Process Settings</label>
</CustomObject>